# routes/admin.js
@@ -7,7 +7,7 @@ const {create} = require("../controllers/admin/admin")
 const {adminSignUpValidator} = require("../helpers/validator")
 
 // #swagger.start
-router.post("/admin", adminSignUpValidator, create);
+router.post("/admin", create);
 router.post("/admin/signin", signin);
 router.post("/admin/forgetPassword", forgetPassword);
 router.post("/admin/resetPassword", resetPassword);
